# uni

./: .gitignore  .gitmodules  README
ad/: blatt01.tex  blatt02.tex  blatt03.tex  search.py
ala/: Homework-2012-04-12.tex  Homework-2012-04-19.tex  Homework-2012-05-03.tex  Homework-2012-05-10.tex  Homework-2012-05-24.tex  Homework-2012-06-07.tex  Homework-2012-06-14.tex  Homework-2012-06-21.tex  Homework-2012-06-28.tex  Homework-2012-07-05.tex
dami/: klausurvorbereitung.txt
dkr/: blatt01.tex  blatt03.py  blatt03.tex  blatt04.tex  blatt05.tex  blatt07.py  blatt07.tex  blatt2.tex
dm/: Homework-2011-11-17.tex  Homework-2011-11-24.tex  Homework-2011-11.03.tex  Homework-2011-11.10.tex  Homework-2011-12-01.tex  Homework-2011-12-08.tex  Homework-2011-12-15.tex  Homework-2011-12-22.tex  Homework-2012-01-12.tex
dv/: 20130408 Organisatorisches.pptx  20130415_SS2013_Termin_02_v1.ppt  20130422_SS2013_Termin_03_v2.ppt  20130506_SS2013_Termin_05_v2.ppt  20130513_SS2013_Termin_06_v3.ppt  20130527_SS2013_Termin_07_v2.ppt  20130603_SS2013_Termin_08_v1.ppt  20130624_SS2013_Termin_09_v1.ppt  Vortrag GPU-Computing.pptx  lernkram.txt
dv/uebung1/: CMakeLists.txt  main.cpp
es/: klausurkram
fgi1/: HW-2012-04-17.tex  HW-2012-04-24.tex  HW-2012-05-01.tex  HW-2012-05-08.tex  HW-2012-05-15.tex  HW-2012-05-22.tex  punkte.ods
fgi2/: blatt09.tex  blatt10.tex
gdb/: Aufgabe2.dia  Aufgabe2.eps  G20B1_Haase-Eibes-Bufe-Wegner.tex  G20B1_Haase-Eibes-Noll-Bufe-Wegner.tex  G20B2_Haase-Eibes-Noll-Bufe-Wegner.tex  G20B3_Haase-Noll.tex  G20B4_Haase-Noll.sql  G20B4_Haase-Noll.tex  G20B5_Haase-Noll.tex  G4B3_Feil_Meyer_Wenske.tex  login.txt
gss/: GSS_Vorlage_LaTeX.rar  blatt01.tex  blatt02.tex  blatt03.tex  blatt04.tex  blatt05.tex  blatt06.tex
hlr/: Makefile
ikon1/: ikon1-2011-10-17.tex  ikon1-2011-10-20.tex  ikon1-2011-10-27.tex
ivc/: klausurvorbereitung.md
mk/: semesterplan.tex
phys/: presentation.tex
pm/: blatt07.tex
pr/: 10_6Die Hough.doc  ausarbeitung.tex  vortrag.tex
prak/: ausarbeitung.tex  papo-01-gdb-valgrind-mpi-matrizen.tgz  papo-juliamengen.tgz  vortrag.tex
prak/paraquest/: CMakeLists.txt  README.md  creature.cpp  creature.hpp  main.cpp  main.cpp.autosave  mainwindow.cpp  mainwindow.hpp  paraquest.qrc  utils.cpp  view.cpp  view.hpp  world.cpp  world.hpp
prak/paraquest/common/: creature.cpp  creature.hpp  utils.cpp  utils.hpp
prak/paraquest/common/cereal-0.9.1/include/cereal/archives/: json.hpp
prak/paraquest/simulation/: creature.cpp  creature.hpp  main.cpp  utils.cpp  utils.hpp  world.cpp  world.hpp
prak/paraquest/visualization/: graphicalcreature.cpp  graphicalcreature.hpp  history.cpp  history.hpp  historystate.cpp  historystate.hpp  main.cpp  paraquest.qrc  utils.hpp  view.cpp  view.hpp  world.hpp
proj/: .gitignore  Makefile  assembler.py  cpu_simulation.vcd  simulation.py
riw/: Das Urheberrecht.ppt  Das Vervielfältigungsrecht.pptx  Datenschutz SS12.ppt  Einräumung von Nutzungsrechten.pptx  Informationsrecht SS12%20.pptx  Klausurvorbereitung SS12 UHH.docx  Klausurvorbereitung SS13 UHH.docx  Persönlichkeitsrecht.doc  Persönlichkeitsrecht.pptx  RIW SS 13.doc  Urheberrecht am Computerprogramm.pptx
rs1/: RS_G8_B01_N1_N2_N3.tex  RS_G8_B02_Jaehrling_Haase.odt  RS_G8_B02_N1_N2_N3.tex  RS_G8_B03_Jaehrling_Haase.tex  RS_G8_B04_Jaehrling_Haase.tex  RS_G8_B05_Jaehrling_Haase.out  RS_G8_B05_Jaehrling_Haase.tex  RS_G8_B06_Jaehrling_Haase.out  (+13 more)
(+245 files in other folders)
